fixed product name and add to wishlist icon overlapping

--- a/customer/src/styles/ProductDetails.css
+++ b/customer/src/styles/ProductDetails.css
@@ -183,3 +183,7 @@
   transform: scale(1.1);
   transition: transform 0.2s;
 }
+.product-name-h1{
+    padding-right: 50px !important;
+    word-wrap: break-word !important;
+}
